<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <include layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/editAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/profile_avatar"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editEtName"/>

            <EditText
                android:id="@+id/editEtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:hint="Name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editEtEmail"/>

            <EditText
                android:id="@+id/editEtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:hint="Email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number: "
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editEtPhone"/>

            <EditText
                android:id="@+id/editEtPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:inputType="phone"
                android:padding="12dp"
                android:hint="Phone Number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of Birth: "
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editEtDob"/>

            <EditText
                android:id="@+id/editEtDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:inputType="date"
                android:padding="12dp"
                android:hint="Date of Birth"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender: "
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editRgGender"/>

            <RadioGroup
                android:id="@+id/editRgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/editRbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:padding="12dp"/>

                <RadioButton
                    android:id="@+id/editRbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:padding="12dp"/>

                <RadioButton
                    android:id="@+id/editRbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:padding="12dp"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/editBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>




